force-app/main/default/objects/VS_SalesPlan__c/VS_SalesPlan__c.object-meta.xml
<CustomObject>
    <description>SalesPlan 마스터 정보를 관리하는 object</description>
    <label>SalesPlan</label>
    <nameField>
        <label>SalesPlan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesPlans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>