force-app/main/default/objects/VS_SalesPlan__c/fields/COIRequest__c.field-meta.xml
<CustomField>
    <fullName>COIRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>수익성 산출 요청을 했는지 여부를 관리하는 필드</description>
    <label>COI Request</label>
    <type>Checkbox</type>
</CustomField>