force-app/main/default/objects/VS_SalesPlan__c/fields/CustomerAgreement__c.field-meta.xml
<CustomField>
    <fullName>CustomerAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>고객과 합의된 물동 계획인지 여부 관리</description>
    <label>Customer Agreement</label>
    <type>Checkbox</type>
</CustomField>