force-app/main/default/objects/VS_SalesPlan__c/fields/Editable__c.field-meta.xml
<CustomField>
    <fullName>Editable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>