force-app/main/default/objects/VS_SalesPlan__c/fields/fm_ApplyActualPeriod__c.field-meta.xml
<CustomField>
    <fullName>fm_ApplyActualPeriod__c</fullName>
    <description>실적 적용월로 해당월까지는 실적을 적용한다.</description>
    <formula>IF(FromPeriod__c  &lt; TEXT(YEAR(DATEVALUE(CreatedDate)))+LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;), 
    TEXT(YEAR(DATEVALUE(CreatedDate)))+LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))-1), 2, &quot;0&quot;), null)</formula>
    <label>ApplyActualPeriod</label>
    <type>Text</type>
</CustomField>