force-app/main/default/objects/VS_SalesPlan__c/fields/FromPeriod__c.field-meta.xml
<CustomField>
    <fullName>FromPeriod__c</fullName>
    <description>SalesPlan을 작성하는 From 년월 정보를 입력하는 필드</description>
    <label>From</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>