force-app/main/default/objects/VS_SalesPlan__c/fields/isProjectSalesPlan__c.field-meta.xml
<CustomField>
    <fullName>isProjectSalesPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProjectSalesPlan</label>
    <type>Checkbox</type>
</CustomField>