force-app/main/default/objects/VS_SalesPlan__c/fields/l_AwardApproval__c.field-meta.xml
<CustomField>
    <fullName>l_AwardApproval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>salesplan이 수주품의에 의해 생성된 경우 그 lookup 관계를 표시 한다.</description>
    <label>Award Approval</label>
    <referenceTo>VS_AwardApproval__c</referenceTo>
    <relationshipLabel>SalesPlans</relationshipLabel>
    <relationshipName>SalesPlans</relationshipName>
    <type>Lookup</type>
</CustomField>