force-app/main/default/objects/VS_SalesPlan__c/fields/l_CopyFrom__c.field-meta.xml
<CustomField>
    <fullName>l_CopyFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>어느 Salesplan을 copy 해서 생성 했는지 정보</description>
    <label>Copy From</label>
    <referenceTo>VS_SalesPlan__c</referenceTo>
    <relationshipLabel>SalesPlans</relationshipLabel>
    <relationshipName>SalesPlans</relationshipName>
    <type>Lookup</type>
</CustomField>