force-app/main/default/objects/VS_SalesPlan__c/fields/l_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>l_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>영업기회 lookup</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SalesPlans</relationshipLabel>
    <relationshipName>SalesPlans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>