force-app/main/default/objects/VS_SalesPlan__c/fields/l_Project__c.field-meta.xml
<CustomField>
    <fullName>l_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>프로젝트 lookup</description>
    <label>Project</label>
    <referenceTo>VS_Project__c</referenceTo>
    <relationshipLabel>SalesPlans</relationshipLabel>
    <relationshipName>SalesPlans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>