force-app/main/default/objects/VS_SalesPlan__c/fields/l_Quote__c.field-meta.xml
<CustomField>
    <fullName>l_Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>견적 lookup</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>SalesPlans</relationshipLabel>
    <relationshipName>SalesPlans</relationshipName>
    <type>Lookup</type>
</CustomField>