force-app/main/default/objects/VS_SalesPlan__c/fields/OpportunityRepresentative__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRepresentative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Representative</label>
    <type>Checkbox</type>
</CustomField>