force-app/main/default/objects/VS_SalesPlan__c/fields/QuoteRepresentative__c.field-meta.xml
<CustomField>
    <fullName>QuoteRepresentative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>견적유형별 대표 SalesPlan 여부를 표시</description>
    <label>Quote Representative</label>
    <type>Checkbox</type>
</CustomField>