force-app/main/default/objects/VS_SalesPlan__c/fields/ToPeriod__c.field-meta.xml
<CustomField>
    <fullName>ToPeriod__c</fullName>
    <description>SalesPlan 기간의 To 년월을 입력하는 필드</description>
    <label>To</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>