force-app/main/default/objects/VS_SalesPlan__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>VS_SalesPlanItem__c.ru_TotalQuantity__c</summarizedField>
    <summaryForeignKey>VS_SalesPlanItem__c.l_SalesPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>